# -AI-block-chain

./: .gitignore  Cargo.toml  README.md  openapi.yaml  tdr-sdk-package.json  tdr-sdk.js  tdr-wrapped-token.sol
agent-protocol/: Cargo.toml
agent-protocol/src/: lib.rs  micropay.rs  registry.rs  wallet.rs
consensus/: Cargo.toml
contracts/: Cargo.toml
cpp-chain/: CMakeLists.txt
docs/: DESIGN.md  agent_integration_guide.md  agent_platform_onboarding.md  audit_readiness_package.md  auditor_contact_packet.md  auditor_submission_package.md  bridge_reconciliation_runbook.md  cbk_sandbox_application.md  cbk_sandbox_cover_letter.md  cma_registration_cover_letter.md  cma_utility_token_registration.md  dex_listing_guide.md  exchange_listing_kit.md  genesis_release_checklist.md  genesis_signing_ceremony.md  launch_sequence.md  launchpad_listing_package.md  mainnet_launch_announcement.md  mainnet_launch_playbook.md  mainnet_readiness_checklist.md  mining_guide.md  mining_pool_guide.md  testnet_deployment_guide.md  tokenomics_investor_summary.md  validator_key_ceremony.md  vesting_and_lockup.md
genesis/: genesis.json
go-chain/: .env.example  Dockerfile  Dockerfile.pool  Dockerfile.prod  Makefile  README.md  agent-micro-payments.json  config_test.go  crypto_fuzz_test.go  currency_identity_test.go  docker-compose.prod.yml  docker-compose.yml  genesis_mainnet.json  genesis_mainnet.json.sha256  genesis_tokenomics.json  go.mod  integration_test.go  main.go  main_test.go  start.sh  (+15 more)
vm/: CMakeLists.txt
vm/src/: gas.cpp  gas.h  opcodes.cpp  opcodes.h  vm.cpp  vm.h  vm_tests.cpp
(+125 files in other folders)
