[package]
name = "agent-protocol"
version = "0.1.0"
edition = "2021"
description = "Agent-focused wallet, registry, and micropayment primitives"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "2"
ed25519-dalek = { version = "2", features = ["std"] }
rand = "0.8"
